# mu

./: .gitignore  AGENTS.md  Cargo.toml  KANBAN_DESIGN.md  LANDER.md  README.md
crates/mu/: Cargo.toml
crates/mu-agent/: Cargo.toml
crates/mu-agent/src/: instructions.rs  lib.rs  session.rs
crates/mu-agent/src/kanban/: document.rs  logger.rs  mod.rs  state.rs  stats.rs  watcher.rs
crates/mu-agent/src/tools/: glob.rs  grep.rs  ls.rs  mod.rs
crates/mu-ai/: Cargo.toml
crates/mu-ai/src/: lib.rs  models.rs  sse.rs
crates/mu-ai/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/mu-kanban-ui/: Cargo.toml
crates/mu-kanban-ui/src/: api.rs  assets.rs  lib.rs  sse.rs
crates/mu-tui/: Cargo.toml
crates/mu-tui/src/: lib.rs
crates/mu/src/: lib.rs  main.rs
crates/mu/tests/: cli.rs  kanban_dag.rs
docs/: architecture.md  roadmap.md
