[workspace]
members = [
    "crates/mu-ai",
    "crates/mu-agent",
    "crates/mu-kanban-ui",
    "crates/mu-tui",
    "crates/mu",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.6"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
dirs = "6.0"
futures = "0.3"
once_cell = "1.21"
ratatui = "0.29"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.18"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
notify = "7.0"
uuid = { version = "1.16", features = ["serde", "v4", "v7"] }
axum = { version = "0.8", features = ["tokio"] }
tower-http = { version = "0.6", features = ["cors"] }
wiremock = "0.6"

[workspace.lints.clippy]
checked_conversions = "deny"
dbg_macro = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
let_unit_value = "deny"
manual_assert = "deny"
manual_ok_or = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_wraps = "deny"
unwrap_used = "deny"
useless_transmute = "deny"
used_underscore_binding = "deny"

[workspace.lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "warn"

