[package]
name = "mu-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true

[lints]
workspace = true
