[package]
name = "mu-kanban-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
mu-agent = { path = "../mu-agent" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true

[lints]
workspace = true
